--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <h1 class="MainHeading">Tennis and How it Works</h1>
     <img src="./Images/Mayfair West Tennis.png" class="Courts" alt="An image of multiple tennis courts in a row from a slight downwards angle" style="float:left">
-    <p class="Discription">On this website you will about tennis and how everything works. For example we will go over all the different shots and when to use them. The "Shots" page will list what all the different types of shots are and an example of how to use them. The "Explanation" page on the other hand will explain what to do in order to actually hit the shot and some tips that I like to think about. The link called "Serve" will send you to a vidoe with an example of someone serving.</p>
+    <p class="Discription">On this website you will about tennis and how everything works. For example we will go over all the different shots and when to use them. The "Shots" page will list what all the different types of shots are and an example of how to use them. The "Explanation" page on the other hand will explain what to do in order to actually hit the shot and some tips that I like to think about. The link called "Serve" will send you to a video with an example of someone serving.</p>
     <img src="./Images/Icons.png" class="Icons" alt="Nav bar titles with icons" style="float:right">
 </body>
 </html>
